src/components/tab-bar/tab-bar.scss
@use '@material/tab-bar/mdc-tab-bar';
@use '@material/tab-scroller/mdc-tab-scroller';
@use '@material/tab-indicator/mdc-tab-indicator';
@use '@material/tab/mdc-tab';

$tab-background-color: var(--contrast-300);
$tab-border-radius: 0.625rem;
$tab-active-outer-edge-curve-size: 0.75rem;
$tab-separator-width: 0.125rem;
$tab-separator-background-color: rgb(var(--contrast-600));

@import './partial-styles/tab-bar-scroller.scss';

:host(limel-tab-bar) {
    --limel-active-tab-background-color: var(
        --tab-panel-background-color,
        rgb(var(--contrast-100))
    );
    isolation: isolate;
    display: block;
    position: relative;
}

:host(.has-tabs-with-equal-width) {
    .mdc-tab {
        flex: 1 0 auto;
    }
}

.mdc-tab {
    // As long as this component is depended on MDC,
    // we need to force it to be font-agnostic.
    // When MDC-dependency is removed, this block can also be removed.
    // However, on removal of MDC-dependency, we should also make sure to check
    // other font-related styles that might be set by MDC,
    // such as `letter-spacing` or `font-size`.
    font-family: inherit;
    font-weight: 400;
    letter-spacing: normal;
    font-size: var(--limel-theme-default-font-size);
    text-transform: none;
}

.mdc-tab-indicator {
    .mdc-tab-indicator__content {
        border: none;
    }
}

.mdc-tab__ripple {
    box-sizing: border-box;
    border-radius: $tab-border-radius;
    border: {
        style: solid;
        color: transparent;
        width: 0.25rem;
    }
    opacity: 0.7;

    &:before,
    &:after {
        transition: background-color 0.5s ease;
    }
}

.mdc-tab {
    border-radius: 0;
    padding-right: 1rem;
    padding-left: 1rem;
    min-width: 2.5rem;
    background-color: transparent;
    flex: 0 0 auto;
    height: 2.5rem;

    &:not(.mdc-tab--active) {
        --badge-background-color: rgb(var(--contrast-600));

        &:after {
            content: '';
            display: block;
            background-color: $tab-separator-background-color;
            width: $tab-separator-width;
            height: 1rem;
            margin: auto;
            position: absolute;
            top: 0;
            bottom: 0;
            border-radius: 1rem;
            right: -$tab-separator-width;
        }

        &:last-of-type {
            &:after {
                display: none;
            }
        }
    }

    .mdc-tab__icon {
        margin-left: -0.25rem;
    }

    limel-badge {
        margin-right: -0.25rem;
    }
}

.mdc-tab--active {
    border-radius: $tab-border-radius $tab-border-radius 0 0;
    background-color: var(--limel-active-tab-background-color);
    z-index: 2;

    &:before,
    &:after {
        content: '';
        display: block;
        width: $tab-active-outer-edge-curve-size;
        height: $tab-active-outer-edge-curve-size;
        position: absolute;
        bottom: 0;
        background-color: var(--limel-active-tab-background-color);

        -webkit-mask-image: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' fill-rule='evenodd' stroke-linejoin='round' stroke-miterlimit='2' clip-rule='evenodd' viewBox='0 0 50 50'><defs/><path d='M0 0c0 27.594 22.406 50 50 50H0V0z'/></svg>"); //For chrome and Safari the browser prefix is needed. (last checked Apr 2020)
        mask-image: url("data:image/svg+xml; utf8, <svg xmlns='http://www.w3.org/2000/svg' fill-rule='evenodd' stroke-linejoin='round' stroke-miterlimit='2' clip-rule='evenodd' viewBox='0 0 50 50'><defs/><path d='M0 0c0 27.594 22.406 50 50 50H0V0z'/></svg>");
    }

    &:before {
        left: -$tab-active-outer-edge-curve-size;
        transform: rotateY(180deg);
    }
    &:after {
        right: -$tab-active-outer-edge-curve-size;
    }

    .mdc-ripple-upgraded--background-focused {
        &:before {
            background-color: transparent;
            transition: background-color 1s ease;
        }
    }
}

.mdc-tab__content {
    gap: 0.375rem;
}

.mdc-tab {
    .mdc-tab__text-label {
        transition: color 0.2s ease;
        padding-left: 0 !important;
        color: var(--limel-theme-on-surface-color);
    }
    &:hover {
        .mdc-tab__text-label {
            color: var(--limel-theme-text-primary-on-background-color);
        }
    }
    &.mdc-tab--active {
        .mdc-tab__text-label {
            color: var(--lime-primary-color, var(--limel-theme-primary-color));
        }
    }
}

